2008-04-09  Mario Torre  <neugens@aicas.com>
 
	* java/io/File.java (canWrite): use canWriteDirectory(String). 
	* vm/reference/java/io/VMFile.java (canWriteDirectory): new native method. 
	* native/jni/java-io/java_io_VMFile.c: correct indentation, sync function
	names with header file definition.
	(Java_java_io_VMFile_canRead): use cpio_checkAccess to get access
	permission. Removed unused variable.
    (Java_java_io_VMFile_canWrite): likewise.
    (Java_java_io_VMFile_canWriteDirectory): new function.
	

2008-03-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* doc/www.gnu.org/events/events.wml:
	Correct layout and fix GSoC link.

2008-03-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* doc/www.gnu.org/external.wml:
	Corrected Jalopy tag name.
	* doc/www.gnu.org/home.wml:
	Update link to tasks.
	* doc/www.gnu.org/announce/20080222.wml:
	Correct IcedTea and builder links.
	* doc/www.gnu.org/downloads/downloads.wml:
	Add 0.97 and 0.97.1.
	* doc/www.gnu.org/events/events.wml:
	Fix links and add FOSDEMs/GSoC.

2008-03-27  Mario Torre  <neugens@aicas.com>

	* gnu/xml/stream/SAXParser.java (getProperty): throw
	SAXNotRecognizedException instead of SAXNotSupportedException
	after fall through all known properties.
	* javax/xml/namespace/QName.java (valueOf): throw
	IllegalArgumentException if string is null.
	* java/util/concurrent/CopyOnWriteArrayList.java (lastIndexOf):
	fixed indentation.
	(indexOf): likewise. 

2008-03-26  Mario Torre  <neugens@aicas.com>

	* java/util/concurrent/CopyOnWriteArrayList.java (SubList.set): 
	(SubList.clear): new method.
	(SubList.checkMod): fix indentation.
	(SubList.checkBoundsInclusive):  likewise. 
	(SubList.checkBoundsExclusive): likewise.
	(SubList): added synchronization. Now throw
	IndexOutOfBoundsException instead of IllegalArgumentException
	when index are out of range.
	(SubList.size): added synchronization.
	(SubList.get): likewise.
	(SubList.listIterator): fixed indentation.